crates/formatter/tests/snapshots/snapshots__synapse__main__delta__64__01msc2716_chunk_to_batch_rename.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2021 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

alter table insertion_events rename column next_chunk_id to next_batch_id;
drop index insertion_events_next_chunk_id;
create index if not exists insertion_events_next_batch_id
	on insertion_events (next_batch_id);

alter table chunk_events rename to batch_events;
alter table batch_events rename column chunk_id to batch_id;
drop index chunk_events_chunk_id;
create index if not exists batch_events_batch_id on batch_events (batch_id);
